# dsp-repository

./: .dockerignore  .gitignore  .kodus-readiness.yml  .release-please-manifest.json  .rustfmt.toml  404.html  CHANGELOG.md  CLAUDE.md  CONTEXT-MAP.md  CONVENTIONS.md  Cargo.toml  LICENSE  LICENSE-AllRightsReserved  README.md  REVIEW.md  UBIQUITOUS_LANGUAGE.md  bacon.toml  deny.toml  deployment.html  docs.html  flake.nix  index.html  introduction.html  justfile  print.html  release-please-config.json  release-plz.toml  repo_structure.html  rust-toolchain.toml  searchindex.js  security.html  toc.html  toc.js  workflows.html
modules/design_system/example_pages/: Cargo.toml  README.md
modules/design_system/example_pages/assets/: openseadragon-init.js
modules/design_system/example_pages/src/: lib.rs
modules/design_system/playground/: CLAUDE.md  Cargo.toml  Dockerfile  SHOWCASE_ARCHITECTURE.md  SHOWCASE_GUIDELINES.md  claude.just  docker-compose.yml  eslint.config.js  justfile  package-lock.json  package.json  playwright-visual.config.ts  playwright.config.ts  tsconfig.json
modules/design_system/playground/assets/css/: playground.css  styles.css
modules/design_system/playground/assets/js/: playground.js  reload.js
modules/design_system/playground/src/: livereload.rs  main.rs  pages.rs  skeleton.rs
modules/design_system/playground/src/playground/: component_registry.rs  components.rs  docs_parser.rs  error.rs  iframe.rs  mod.rs  parameters.rs  renderer.rs  shell.rs  templates.rs
modules/design_system/playground/templates/: playground-skeleton.html
modules/design_system/playground/tests/e2e/: design-system.spec.ts  functional.spec.ts  visual.spec.ts
modules/dpe/: CLAUDE.md  Cargo.toml  Dockerfile  README.md  package.json
modules/dpe/api/: Cargo.toml
modules/dpe/api-oai/: Cargo.toml
modules/dpe/api-oai/src/: error.rs  lib.rs  resumption.rs  xml.rs
modules/dpe/api-oai/src/handlers/: get_record.rs  identify.rs  list_identifiers.rs  list_metadata_formats.rs  list_records.rs  list_sets.rs  mod.rs  test_utils.rs
modules/dpe/api-oai/src/metadata/: datacite.rs  dublin_core.rs  helpers.rs  mod.rs  record_datacite.rs  record_dublin_core.rs  resolve.rs  types.rs
modules/dpe/api/src/routes/: calculator.rs  home.rs  project.rs
modules/dpe/app/: CHANGELOG.md  Cargo.toml
modules/dpe/app/src/: lib.rs
modules/dpe/app/src/domain/: cluster.rs  contributors.rs  mod.rs  organizations.rs  person.rs  project.rs  project_repository.rs  projects.rs  record.rs  record_repository.rs  utils.rs
modules/dpe/core/: Cargo.toml
modules/dpe/core/src/: chronontology_cache.rs  cluster.rs  cluster_cache.rs  contributors.rs  lib.rs  organization.rs  organization_cache.rs  person.rs  person_cache.rs  project.rs  project_cache.rs  project_repository.rs  record.rs  record_cache.rs  record_repository.rs  temporal_enrichment_cache.rs  utils.rs  w3cdtf.rs
modules/dpe/dto/: Cargo.toml
modules/dpe/dto/src/: metadata.rs
modules/dpe/end2end/: playwright.config.ts
modules/dpe/end2end/tests/: accessibility.spec.ts
modules/dpe/frontend/: CHANGELOG.md  Cargo.toml
modules/dpe/frontend/src/: lib.rs
modules/dpe/public/: telemetry.js
modules/dpe/server/: CHANGELOG.md  Cargo.toml
modules/dpe/server/data/: chronontology-periods.json  temporal-coverage-enrichment.json
modules/dpe/server/data/clusters/: cluster-001-ekws-cas.json  cluster-001-emms.json  cluster-002-nietzsche.json  cluster-003-beol.json  cluster-003-swiss-visual-culture.json  cluster-004-dasch-showcase.json  cluster-004-vitrocentre.json  cluster-004.json  cluster-005-dasch.json  projectcluster-001.json
modules/dpe/server/data/collections/: collection-003-swiss-visual-archive.json  collection-006-wonderland-characters.json  collection-007-looking-glass.json  collection-007.json
modules/dpe/server/data/organizations/: 0101-organization-000.json  0101-organization-001.json  0102-organization-000.json  0102-organization-001.json  (+327 more)
modules/dpe/server/fuzz/: Cargo.toml
modules/dpe/server/src/: app_state.rs  config.rs  dev_reload.rs  fragments.rs  main.rs  router.rs  routes.rs  telemetry_collector.rs  traceparent.rs  view.rs
modules/dpe/services/: Cargo.toml
modules/dpe/services/src/: lib.rs
modules/dpe/src/: api.rs  app_state.rs  db.rs  domain.rs  error.rs  main.rs
modules/dpe/src/api/: home.rs  project.rs
modules/dpe/src/domain/: project.rs  shortcode.rs
modules/dpe/src/services/: project_repository.rs
modules/dpe/src/views/: home.rs  project.rs
modules/dpe/storage/: Cargo.toml
modules/dpe/storage/src/: file_utils.rs  lib.rs
modules/dpe/style/: daisy-ui-theme.css  main.css
modules/dpe/telemetry/: Cargo.toml
modules/dpe/telemetry/src/: beacon.rs  lib.rs  origin.rs  page_url.rs  traceparent.rs
modules/dpe/types/: Cargo.toml
modules/dpe/types/src/: error.rs  lib.rs
modules/dpe/views/: base.html  home.rs
modules/dpe/views/home/: index.html  project.html
modules/dpe/views/project/: index.html  index_project.html  show.html
modules/dpe/web/: Cargo.toml
modules/dpe/web-e2e-tests/: .gitignore  VISUAL-PARITY.md  biome.json  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
modules/dpe/web-e2e-tests/tests/: accessibility-tabs.spec.ts  accessibility.spec.ts  axe-helpers.ts  tab-switching.spec.ts  visual-about.spec.ts  visual-misc.spec.ts  visual-project-detail.spec.ts  visual-projects-list.spec.ts  visual-regression.spec.ts
modules/dpe/web/src/: lib.rs  test_support.rs
modules/dto/: Cargo.toml
modules/dto/src/: metadata.rs
modules/leptos-dpe/frontend/: CHANGELOG.md  Cargo.toml
modules/leptos-hello/app/: Cargo.toml
modules/leptos-hello/app/src/: lib.rs
modules/mosaic/playground/: .gitignore  Cargo.toml  Dockerfile  README.md
modules/mosaic/playground/src/: app.rs  dev_reload.rs  lib.rs  main.rs
modules/mosaic/playground/style/: main.css
modules/mosaic/tiles/: Cargo.toml  build.rs  claude.md
modules/mosaic/tiles/.claude/: settings.local.json
modules/mosaic/tiles/src/: builder.rs  counter.rs  lib.rs  reactive.rs
(+5855 files in other folders)
