[workspace]
members = [
  "modules/dpe",
  "modules/mosaic/demo",
  "modules/mosaic/demo_macro",
  "modules/mosaic/tiles",
  "modules/leptos-dpe/app",
  "modules/leptos-dpe/frontend",
  "modules/leptos-dpe/server",
]
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
edition = "2021"
homepage = "https://github.com/dasch-swiss/dsp-repository"
repository = "https://github.com/dasch-swiss/dsp-repository"
documentation = "https://github.com/dasch-swiss/dsp-repository"
readme = "README.md"
description = "The DSP-Repository provides tooling and services for transforming, validating, and serving research project metadata and data. It is part of the DaSCH Service Platform, supporting FAIR principles for research data in the humanities."
authors = ["DaSCH - Swiss National Data and Service Center for the Humanities"]

[workspace.dependencies]
askama = { version = "0.13.0", features = ["full"] }
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-macros = "0.5.0-alpha.1"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
leptos = { version = "0.8.2", features = ["islands"] }
leptos_meta = "0.8.2"
log = "0.4.29"
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
serde_with = "3.11.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "js"] }
wasm-bindgen = "=0.2.105"
pulldown-cmark = "0.12"
glob = "0.3.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = { version = "2.4.0" }
r2d2 = { version = "0.8.10" }
r2d2_sqlite = { version = "0.32.0" }
leptos_router = "0.8.2"
leptos_axum = "0.8.2"
cfg-if = "1.0.0"
console_log = "1.0.0"
http = "1.3.1"
simple_logger = "5.0.0"
thiserror = "2.0.12"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# Build profiles
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Leptos configuration for cargo-leptos
[[workspace.metadata.leptos]]
name = "leptos-meta2"
bin-package = "leptos-server"
lib-package = "frontend"
site-root = "modules/leptos-dpe/target/site"
site-pkg-dir = "pkg"
assets-dir = "modules/leptos-dpe/public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "modules/leptos-dpe/end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
tailwind-input-file = "modules/leptos-dpe/style/main.css"
lib-profile-release = "wasm-release"
