[workspace]
members = [
  "modules/mosaic/playground",
  "modules/mosaic/playground_macro",
  "modules/mosaic/tiles",
  "modules/dpe/core",
  "modules/dpe/api-oai",
  "modules/dpe/web",
  "modules/dpe/server",
  "modules/dpe/telemetry",
]
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.2.1"
edition = "2021"
homepage = "https://github.com/dasch-swiss/dsp-repository"
repository = "https://github.com/dasch-swiss/dsp-repository"
documentation = "https://github.com/dasch-swiss/dsp-repository"
readme = "README.md"
description = "The DSP-Repository provides tooling and services for transforming, validating, and serving research project metadata and data. It is part of the DaSCH Service Platform, supporting FAIR principles for research data in the humanities."
authors = ["DaSCH - Swiss National Data and Service Center for the Humanities"]

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
insta = { version = "1.47", features = ["yaml", "filters"] }
datastar = { version = "0.3", features = ["axum"] }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["islands"] }
leptos_meta = "0.8.2"
leptos-use = "0.15"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower_governor = "0.6"
tower-http = { version = "0.6.8", features = ["trace", "fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# OpenTelemetry
axum-tracing-opentelemetry = "0.33"
init-tracing-opentelemetry = { version = "0.36", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
tracing-opentelemetry-instrumentation-sdk = "0.32"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
tracing-opentelemetry = "0.32"
url = { version = "2", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "v7", "js"] }
wasm-bindgen = "=0.2.105"
leptos_router = "0.8.2"
leptos_axum = "0.8.2"
cfg-if = "1.0.0"
console_log = "1.0.0"
http = "1.3.1"
thiserror = "2.0.12"
quick-xml = "0.37"
chrono = { version = "0.4" }
proptest = "1"

# Build profiles
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# WASM-optimized release profile for mosaic-playground (Leptos islands + WASM)
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# Leptos configuration for cargo-leptos
[[workspace.metadata.leptos]]
name = "dpe"
bin-package = "dpe-server"
lib-package = "dpe-web"
site-root = "modules/dpe/target/site"
site-pkg-dir = "pkg"
assets-dir = "modules/dpe/public"
site-addr = "127.0.0.1:4000"
reload-port = 4001
end2end-cmd = "npx playwright test"
end2end-dir = "modules/dpe/web-e2e-tests"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
tailwind-input-file = "modules/dpe/style/main.css"
