[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
askama.workspace = true
async-stream.workspace = true
axum-macros.workspace = true
axum.workspace = true
datastar.workspace = true
futures.workspace = true
glob.workspace = true
maud.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
