[package]
name = "dto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
types = { path = "../types" }
serde.workspace = true
serde_with.workspace = true
