[package]
name = "example_pages"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
components = { path = "../components" }
async-stream.workspace = true
axum.workspace = true
axum-macros.workspace = true
chrono = "0.4"
datastar.workspace = true
maud.workspace = true
rand = "0.9"
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Example app binaries
[[bin]]
name = "basic-website"
path = "src/apps/basic_website/main.rs"
