[package]
name = "playground"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
components = { path = "../components" }
async-stream.workspace = true
axum.workspace = true
axum-macros.workspace = true
datastar.workspace = true
futures.workspace = true
maud.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[[bin]]
name = "playground-server"
path = "src/main.rs"
