[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
types = {path = "../types"}
askama.workspace = true
serde.workspace = true
