[package]
name = "app"
version = "0.1.2"
edition = "2021"
publish = false

# cdylib target required by cargo-leptos (produces an empty WASM stub)
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
leptos.workspace = true
leptos-use.workspace = true
mosaic-tiles = { path = "../../mosaic/tiles", default-features = false, features = ["icon", "button", "link", "card", "badge", "tabs", "breadcrumb"] }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing = { workspace = true, optional = true }
urlencoding = "2.1"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos/islands", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:tokio", "dep:tracing"]
