[package]
name = "dpe-server"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
dpe-core = { path = "../core" }
dpe-api-oai = { path = "../api-oai" }
dpe-web = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr", "islands" ]}
leptos_axum.workspace = true

axum.workspace = true
datastar.workspace = true
figment = { version = "0.10", features = ["env", "toml"] }
mosaic-tiles = { path = "../../mosaic/tiles", default-features = false, features = ["icon"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
futures = "0.3"
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding = "2.1"

[dev-dependencies]
insta.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
