[package]
name = "dpe-server"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
dpe-core = { path = "../core" }
dpe-telemetry = { path = "../telemetry" }
dpe-api-oai = { path = "../api-oai" }
dpe-web = { path = "../web", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr", "islands" ]}
leptos_axum.workspace = true

axum.workspace = true
datastar.workspace = true
figment = { version = "0.10", features = ["env", "toml"] }
mosaic-tiles = { path = "../../mosaic/tiles", default-features = false, features = ["icon"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum-tracing-opentelemetry.workspace = true
init-tracing-opentelemetry.workspace = true
tracing-opentelemetry-instrumentation-sdk.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true
tracing-opentelemetry.workspace = true
pyroscope.workspace = true
futures = "0.3"
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
urlencoding = "2.1"

# Linux-only: swap the global allocator to jemalloc so the pyroscope jemalloc
# backend can produce heap profiles. macOS dev keeps the system allocator.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator.workspace = true

[dev-dependencies]
insta.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
