[package]
name = "services"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
types = { path = "../types" }
regex.workspace = true
serde_json.workspace = true
glob.workspace = true
