[package]
name = "types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
uuid.workspace = true
