[package]
name = "mosaic-playground"
version.workspace = true
edition = "2021"
publish = false

# Plain Axum + Maud server (Leptos → Maud migration, DEV-6642). No cdylib/WASM:
# the playground is a server-rendered MPA showcase, like DPE.

[dependencies]
axum.workspace = true
maud.workspace = true
tokio.workspace = true
tower-http.workspace = true
mosaic-tiles = { path = "../tiles" }
