[package]
name = "mosaic-tiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_meta = "0.8.5"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { workspace = true, optional = true }
icondata = { version = "0.7" }

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
ssr = ["leptos/ssr"]
default = [
  "accordion",
  "badge",
  "breadcrumb",
  "button",
  "button_group",
  "card",
  "icon",
  "link",
  "popover",
  "sidebar",
  "tabs",
  "theme_provider",
]
accordion = ["icon"]
badge = []
breadcrumb = []
button = []
button_group = ["button"]
card = []
icon = []
link = ["button"]
popover = ["button"]
sidebar = ["icon"]
tabs = []
theme_provider = []

[build-dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
sha256 = { version = "1.6.0" }
