[package]
name = "mosaic-tiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
serde.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
icondata = "0.7"
uuid.workspace = true

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
ssr = ["leptos/ssr"]
default = [
  "accordion",
  "badge",
  "breadcrumb",
  "button",
  "button_group",
  "card",
  "icon",
  "link",
  "popover",
  "sidebar",
  "tabs",
]
accordion = ["icon"]
badge = []
breadcrumb = []
button = []
button_group = ["button"]
card = []
icon = []
link = ["button"]
popover = ["button"]
sidebar = ["icon"]
tabs = []

[build-dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
sha256 = "1.6.0"
