[package]
name = "mosaic-tiles"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
serde.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
icondata = "0.7"
uuid.workspace = true

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
ssr = ["leptos/ssr"]
default = [
  "badge",
  "breadcrumb",
  "button",
  "card",
  "icon",
  "link",
  "tabs",
]
badge = []
breadcrumb = []
button = []
card = []
icon = []
link = ["button"]
tabs = []

[build-dependencies]
reqwest = { version = "0.13.4", features = ["blocking"] }
sha256 = "1.6.0"
